--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/Assets/Nokobot.meta
+/Assets/Nokobot/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
